--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio JS RocketSeat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Desafio JS Starter RocketSeat</h1>
+
+    <script src="main.js"></script>
 </body>
 </html>
